// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformer function custom hash - scoped to file 1`] = `
Array [
  "
	.button {
		--ae7621: red;
		--b682a4: 24px;
		background: var(--ae7621);
		border-color: var(--ae7621);
		font-size: var(--b682a4);
	}

	.input {
		--ae7621: red;
		--b682a4: 24px;
		background: var(--ae7621);
		border-color: var(--ae7621);
		font-size: var(--b682a4);
		border: 1px solid var(--ae7621);
	}
	",
  "
	:root {
		--199650: red;
		--29d9c5: 24px;
		--d85b32: calc(var(--29d9c5) * 2);
	}
	.section {
		background: var(--199650);
		border-color: var(--199650);
		font-size: var(--29d9c5);
	}

	.heading {
		background: var(--199650);
		border-color: var(--199650);
		font-size: var(--29d9c5);
		border: 1px solid var(--199650);
	}
	",
]
`;

exports[`transformer function custom hash 1`] = `
Array [
  "
	.button {
		--70dda5: red;
		--9b1d0a: 24px;
		background: var(--70dda5);
		border-color: var(--70dda5);
		font-size: var(--9b1d0a);
	}

	.input {
		--70dda5: red;
		--9b1d0a: 24px;
		background: var(--70dda5);
		border-color: var(--70dda5);
		font-size: var(--9b1d0a);
		border: 1px solid var(--70dda5);
	}
	",
  "
	:root {
		--70dda5: red;
		--9b1d0a: 24px;
		--defe4c: calc(var(--9b1d0a) * 2);
	}
	.section {
		background: var(--70dda5);
		border-color: var(--70dda5);
		font-size: var(--9b1d0a);
	}

	.heading {
		background: var(--70dda5);
		border-color: var(--70dda5);
		font-size: var(--9b1d0a);
		border: 1px solid var(--70dda5);
	}
	",
]
`;

exports[`transformer function emoji namespace 1`] = `
Array [
  "
	.button {
		--🔥-color: red;
		--🔥-font-size: 24px;
		background: var(--🔥-color);
		border-color: var(--🔥-color);
		font-size: var(--🔥-font-size);
	}

	.input {
		--🔥-color: red;
		--🔥-font-size: 24px;
		background: var(--🔥-color);
		border-color: var(--🔥-color);
		font-size: var(--🔥-font-size);
		border: 1px solid var(--🔥-color);
	}
	",
  "
	:root {
		--🔥-color: red;
		--🔥-font-size: 24px;
		--🔥-large-font-size: calc(var(--🔥-font-size) * 2);
	}
	.section {
		background: var(--🔥-color);
		border-color: var(--🔥-color);
		font-size: var(--🔥-font-size);
	}

	.heading {
		background: var(--🔥-color);
		border-color: var(--🔥-color);
		font-size: var(--🔥-font-size);
		border: 1px solid var(--🔥-color);
	}
	",
]
`;

exports[`transformer function namespace 1`] = `
Array [
  "
	.button {
		--app-color: red;
		--app-font-size: 24px;
		background: var(--app-color);
		border-color: var(--app-color);
		font-size: var(--app-font-size);
	}

	.input {
		--app-color: red;
		--app-font-size: 24px;
		background: var(--app-color);
		border-color: var(--app-color);
		font-size: var(--app-font-size);
		border: 1px solid var(--app-color);
	}
	",
  "
	:root {
		--app-color: red;
		--app-font-size: 24px;
		--app-large-font-size: calc(var(--app-font-size) * 2);
	}
	.section {
		background: var(--app-color);
		border-color: var(--app-color);
		font-size: var(--app-font-size);
	}

	.heading {
		background: var(--app-color);
		border-color: var(--app-color);
		font-size: var(--app-font-size);
		border: 1px solid var(--app-color);
	}
	",
]
`;
